Add build option

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -1,3 +1,7 @@
-
-all: bootcmd
+boot.scr: bootcmd
 	mkimage -A arm -O linux -T script -C none -a 0 -e 0 -n "Beagleboard-xM boot script" -d bootcmd boot.scr
+
+all : boot.scr
+
+clean :
+	rm boot.scr
